# badger

./: .gitignore  Cargo.toml  README.md
crates/: index.md
crates/badger-cli/: Cargo.toml
crates/badger-cli/src/: main.rs
crates/badger-cli/src/commands/: build.rs  check.rs  format.rs  graph.rs  mod.rs  run.rs
crates/badger-compiler/: Cargo.toml
crates/badger-cst/: Cargo.toml
crates/badger-cst/src/: kinds.rs  lexer.rs  lib.rs  parser.rs
crates/badger-cst/tests/: roundtrip.rs
crates/badger-graph/: Cargo.toml
crates/badger-host/: Cargo.toml
crates/badger-interpreter/: Cargo.toml
crates/badger-optimizer/: Cargo.toml
crates/badger-runtime/: Cargo.toml
examples/hello-web/: index.badger
examples/hello-world/: index.badger
lib/std/builtin/: index.badger  string.badger
lib/std/collections/: index.badger  map.badger
lib/std/io/: index.badger
lib/std/process/: index.badger
spec/: grammar.md  ir.md  lang.md  scratch.badger
spec/discussion/: async.md  index.md
